css/style.css
body {
  background-color: #fafafa;
}

/*#main-title {
  width: 50em;
  margin-left: auto;
  margin-right: auto;
}
*/
#main-title span {
  color: #397FD8;
  font-size: 2.3em;
  top: 45%;
  font-weight: 300;
  font-family: 'Open Sans', sans-serif;
}

.main-title span {
  margin-left: .8em;
}

#main-title {
  width: 50em;
  margin-left: auto;
  margin-right: auto;
}

nav {
  margin-top: 20%;
  /*display: none;*/
}

.active a{
  color: #26B6FA;
}

#nav-list {
  z-index: 200;
  min-height: 5em;
  max-width: 50em;
  background-color: white;
  margin-left: auto;
  margin-right: auto;
  -webkit-box-shadow: 0px 2px 3px #DADADA;
  -moz-box-shadow: 0px 2px 3px #DADADA;
  box-shadow: 0px 2px 3px #DADADA;
}


nav ul {
  margin: auto;
  max-width: 36em;
  margin-top: 0;
  padding-left: 2em;
  padding-top: .5em;
  list-style: none;
}

nav li {
  display: inline;
  margin-right: 2em;
  margin-right: 1.2em;
  font-size: 2.5em;
  color: #3A3A3A;
  font-weight: 300;
  font-family: 'Open Sans', sans-serif;
}

nav li:hover {
    cursor: pointer;
}

a {
  text-decoration: none;
  color: #555;
}

a:hover {
  color: #26B6FA;
}

a:active {
  color: #26B6FA;
}

a, a:hover, a:active {
  -webkit-transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  transition-duration: 0.4s;
}

.info-container {
  display: none;
  max-width: 45em;
  margin-top: .6em;
  margin-bottom: 4em;
  background-color: white;
  margin-left: auto;
  margin-right: auto;
  font-family: 'Open Sans', sans-serif;
  padding: 30px 40px 34px;
  -webkit-box-shadow: 0px 2px 4px #DADADA;
  -moz-box-shadow: 0px 2px 4px #DADADA;
  box-shadow: 0px 2px 4px #DADADA;
}

h1 {
  font-weight: 300;
}

/*  --------------------------------------------------
                  Work Page
  -------------------------------------------------- */

hr {
  margin: 7% 0 10% 0;
  border-top: 2px solid #E9E9E9;
}

#goodfood-iphone img {
  margin-left: 4%;
  width: 22%;
  float: left;
}

#goodfood-desktop img {
  width: 60%;
  margin-left: 9%;
}

.work-text {
  color: #575757;
  font-weight: 300;
  font-size: 1.2em;
  margin-top: 2em;
  margin-left: 2%;
  margin-right: 2%;
  text-align: justify;
}

#walert-desktop1 img {
  float: left;
}

#walert-desktop1 img, #walert-desktop2 img {
  width: 47%;
  margin-left: 2%;
}

.desktop-img img {
  -webkit-box-shadow: 0px 2px 3px #B9B9B9;
  -moz-box-shadow: 0px 2px 3px #B9B9B9;
  box-shadow: 0px 2px 3px #B9B9B9;
}

/*  --------------------------------------------------
                  Contact Page
  -------------------------------------------------- */

ul#contact-list {
  list-style: none;
  padding: 0;
  margin: auto;
  width: 20.95em;
}

#contact-list li {
  display: inline-block;
  margin-right: 2em;
}

.facebook-icon {
  background: url(../images/facebook.svg);
}

.linkedin-icon {
  background: url(../images/linkedin.svg);
}

.facebook-icon, .linkedin-icon {
  display: block;
  width: 3.1em;
  height: 3.1em;
  background-size: 3.1em 3.1em;
}

#git img, #send-email img {
  height: 3em;
}

#send-email img {
  cursor: pointer;
}

#send-email img, #git img, .linkedin-icon, .facebook-icon {
  opacity: .8;
}

#nameinput {
  width: 20em;
  float: left;
}


input#name-field {
  width: 18em;
}

#emailinput {
  float: left;
  width: 20em;
}

fieldset {
  padding: 2em;
  border: none;
}

textarea {
  float: left;
  clear: both;
  margin: 2px;
  width: 100%;
  height: 150px;
}

.email-container {
  display: none;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

#name-field, #email-field {
  margin-right: 3em;
  margin-bottom: 2em;
  height: 3em;
}

#email-field {
  width: 18em;
}

input#submit {
  clear: both;
  float: right;
}

input#name-field, input#email-field, textarea {
  background-color: #F5F5F5;
  border: none;
  color: #5688BE;
}

input.submit {
  clear: both;
  float: right;
  width: 100px;
  margin-top: .5em;
  background: #5DA3EE;
  color: #FFF;
  font-size: .8em;
  height: 30px;
  border: 0;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  transition-duration: 0.4s;
}

.submit:hover {
  background: #3D84DF;
  cursor: pointer;
  -webkit-transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  transition-duration: 0.4s;
}


#about_container img {
  width: 30%;
  float: left;
  margin: 0 3% 1% 0;
  padding: 6px;
  border: 1px solid #DADADA;
  -webkit-box-shadow: 0px 2px 3px #DADADA;
  -moz-box-shadow: 0px 2px 3px #DADADA;
  box-shadow: 0px 2px 3px #C4C4C4;
}

#about_container p {
  margin-top: 0;
  text-align: justify;
  color: #333;
  font-weight: 300;
  font-size: 1.1em;
  font-family: 'Open Sans', sans-serif;
}

#space {
  clear: both;
  float: left;
}



/*  --------------------------------------------------
                  Reveal Modals
  -------------------------------------------------- */

  .reveal-modal-bg {
    position: fixed;
    height: 100%;
    width: 100%;
    background: #000;
    background: rgba(0,0,0,.8);
    z-index: 100;
    display: none;
    top: 0;
    left: 0;
    }

  .reveal-modal {
    visibility: hidden;
    top: 10%;
    left: 50%;
    margin-left: -300px;
    width: 520px;
    background: #fff url(modal-gloss.png) no-repeat -200px -80px;
    position: absolute;
    z-index: 101;
    padding: .4em;
    -webkit-box-shadow: 0px 2px 4px #DADADA;
    -moz-box-shadow: 0px 2px 4px #DADADA;
    box-shadow: 0px 2px 4px #DADADA;
    }

    .xlarge.desktop-img img {
      width: 100%;
    }


  .reveal-modal.small     { width: 200px; margin-left: -140px;}
  .reveal-modal.medium    { width: 400px; margin-left: -240px;}
  .reveal-modal.large     { width: 600px; margin-left: -340px;}
  .reveal-modal.xlarge    { width: 67%; margin-left: -35%;}

  .reveal-modal .close-reveal-modal {
    font-size: 1.7em;
    line-height: .5;
    position: absolute;
    top: -18px;
    right: -8px;
    color: #aaa;
    text-shadow: 0 -1px 1px rbga(0,0,0,.6);
    font-weight: bold;
    cursor: pointer;
    }
  /*

  NOTES

  Close button entity is &#215;

  Example markup

  <div id="myModal" class="reveal-modal">
    <h2>Awesome. I have it.</h2>
    <p class="lead">Your couch.  I it's mine.</p>
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ultrices aliquet placerat. Duis pulvinar orci et nisi euismod vitae tempus lorem consectetur. Duis at magna quis turpis mattis venenatis eget id diam. </p>
    <a class="close-reveal-modal">&#215;</a>
  </div>

  */

/*  --------------------------------------------------
                  Media Queries
  -------------------------------------------------- */

@media screen
and (max-width: 730px){

  .reveal-modal.xlarge {
    width: 84%;
    margin-left: -45%;
  }
}


@media screen
and (max-width:620px) {

  nav li {
    font-size: 2em;
  }

  nav ul {
    max-width: 28.7em;
  }

  #nav-list {
    min-height: 4em;
  }

  .info-container {
    padding: 1em 0.5em 2em;
  }

}
@media screen
and (max-width: 560px) {

  #walert-desktop1 img, #walert-desktop2 img {
    width: 96%;
    margin-bottom: 1em;
    margin-left: 2%;
    float: none;
  }
}

@media screen
and (max-width: 510px) {

  nav {
    margin-top: 30%;
  }

  nav li {
    font-size: 1.6em;
  }

  nav ul {
    max-width: 23.7em;
  }

  #nav-list {
    min-height: 3.5em;
  }

  #main-title span {
    font-size: 1.7em;
  }

  #goodfood-iphone img {
    width: 60%;
    margin-left: 20%;
  }

  #goodfood-desktop img {
    width: 100%;
    margin-left: 0;
  }

  .reveal-modal.xlarge {
    width: 95%;
    margin-left: -49%;
  }

  .reveal-modal {
    padding: .4em .4em .4em;
  }

  .reveal-modal .close-reveal-modal {
    top: -15px;
    right: 0px;
    color: #CECECE;
  }

}

@media screen
and (max-width: 420px){

  nav li {
    font-size: 1.4em;
  }

  nav ul {
    max-width: 20.2em;
  }

}

@media screen
and (max-width: 400px){

  nav {
    margin-top: 45%;
  }

  nav li {
    font-size: 2.8em;
    text-align: center;
    }

  #contact-list li {
    margin-right: 1em;
    }

  ul#contact-list {
    width: 17em;
  }
  }

